force-app/main/default/objects/AI_Feature_Config__mdt/AI_Feature_Config__mdt.object-meta.xml
<CustomObject>
    <label>AI Feature Config</label>
    <pluralLabel>AI Feature Configs</pluralLabel>
</CustomObject>