force-app/main/default/objects/AI_Feature_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this AI feature is enabled.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>