force-app/main/default/objects/AI_Feature_Config__mdt/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>Display name for this AI feature.</description>
    <label>Feature Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>