force-app/main/default/objects/AI_Feature_Config__mdt/fields/Model_Override__c.field-meta.xml
<CustomField>
    <fullName>Model_Override__c</fullName>
    <description
  >Optional model name overriding the provider&apos;s default for this feature.</description>
    <label>Model Override</label>
    <length>100</length>
    <type>Text</type>
</CustomField>