force-app/main/default/objects/AI_Feature_Config__mdt/fields/Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template__c</fullName>
    <description
  >Prompt sent to the provider. Use {context} as the substitution placeholder for request context data.</description>
    <label>Prompt Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>