force-app/main/default/objects/AI_Feature_Config__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description
  >Developer name of the AI_Provider_Config__mdt record to route this feature to.</description>
    <label>Provider Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>